--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   <link href="assets/css/swiper.min.css" rel="stylesheet">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
+   <!-- Latest compiled and minified CSS -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+   <!-- Optional theme -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" >
+
+   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="form.css" >
+    
+
   <!-- <link href="assets/css/main.css" rel="stylesheet">
   <link href="assets/css/util.css" rel="stylesheet"> -->
   <!--Revolution Style Sheets-->
@@ -1810,6 +1819,53 @@
           </div>
         </div> -->
       <!-- end -->
+      <div class="features-block__title final-form">Contact Us</div>
+
+      <div class="form-top">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
+                <div class="panel panel-danger">
+                    <div class="panel-body">
+                        <form id="reused_form">
+                            <div class="form-group">
+                                <label><i class="fa fa-user" aria-hidden="true"></i> Name</label>
+                                <input type="text" name="name" class="form-control" placeholder="Enter Name">
+                            </div>
+                            <div class="form-group">
+                                <label><i class="fa fa-envelope" aria-hidden="true"></i> Email</label>
+                                <input type="email" name="email" class="form-control" placeholder="Enter Email">
+                            </div>
+                            <div class="form-group">
+                                <label><i class="fa fa-phone" aria-hidden="true"></i> Phone</label>
+                                <input type="number" name="phone" class="form-control" placeholder="Enter Mobile Number">
+                            </div>
+                            <div class="form-group">
+                                <label><i class="fa fa-comment" aria-hidden="true"></i> Message</label>
+                                <textarea rows="3" name="message" class="form-control" placeholder="Type Your Message"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label><i class="fa fa-gear" aria-hidden="true"></i> Select</label>
+                                <select name="" id="" class="form-control">
+                                    <option value="" class="form-control">Choose one</option>
+                                    <option value="" class="form-control">ARTISTS</option>
+                                    <option value=""class="form-control">BRANDS</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label><i class="fa fa-upload" aria-hidden="true"></i>Upload Your Files</label>
+                                <input type="file" name="image" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-raised btn-block btn-primary">SUBMIT</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Form Ended -->
+</div>
 
   </main>
   
@@ -1926,6 +1982,8 @@
 <!--Theme JS-->
 <script src="assets/js/theme.js"></script>
 <script src="assets/js/main"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 </body>
 
 </html>
