Updated Contact form

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a class="top-menu__menu-link" href="#video-gallery">Gallery</a>
             </li>
             <li class="top-menu__menu-item">
-              <a class="top-menu__menu-link" href="#works">CONTACT US</a>
+              <a class="top-menu__menu-link" href="#final-form">CONTACT US</a>
             </li>
           </ul>
         </div>
@@ -122,7 +122,7 @@
             <a class="nav-link menu-panel__menu-link" href="#video-gallery">Gallery</a>
           </li>
           <li class="menu-panel__menu-item">
-            <a class="nav-link menu-panel__menu-link" href="#works">CONTACT US</a>
+            <a class="nav-link menu-panel__menu-link" href="#final-form">CONTACT US</a>
           </li>
         </ul>
         <div class="menu-panel__footer">
@@ -1819,8 +1819,7 @@
           </div>
         </div> -->
       <!-- end -->
-      <div class="features-block__title final-form">Contact Us</div>
-
+      <div class="features-block__title" id="final-form">Contact Us</div>
       <div class="form-top">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
