--- a/index.html
+++ b/index.html
@@ -1827,23 +1827,23 @@
                     <div class="panel-body">
                         <form id="reused_form">
                             <div class="form-group">
-                                <label><i class="fa fa-user" aria-hidden="true"></i> Name</label>
+                                <label class="f-left"><i class="fa fa-user" aria-hidden="true"></i> Name</label>
                                 <input type="text" name="name" class="form-control" placeholder="Enter Name">
                             </div>
                             <div class="form-group">
-                                <label><i class="fa fa-envelope" aria-hidden="true"></i> Email</label>
+                                <label class="f-left"><i class="fa fa-envelope" aria-hidden="true"></i> Email</label>
                                 <input type="email" name="email" class="form-control" placeholder="Enter Email">
                             </div>
                             <div class="form-group">
-                                <label><i class="fa fa-phone" aria-hidden="true"></i> Phone</label>
-                                <input type="number" name="phone" class="form-control" placeholder="Enter Mobile Number">
+                                <label class="f-left"><i class="fa fa-phone" aria-hidden="true"></i> Phone</label>
+                                <input type="text" name="phone" class="form-control" placeholder="Enter Mobile Number">
                             </div>
                             <div class="form-group">
-                                <label><i class="fa fa-comment" aria-hidden="true"></i> Message</label>
+                                <label class="f-left"><i class="fa fa-comment" aria-hidden="true"></i> Message</label>
                                 <textarea rows="3" name="message" class="form-control" placeholder="Type Your Message"></textarea>
                             </div>
                             <div class="form-group">
-                                <label><i class="fa fa-gear" aria-hidden="true"></i> Select</label>
+                                <label class="f-left"><i class="fa fa-gear" aria-hidden="true"></i> Select</label>
                                 <select name="" id="" class="form-control">
                                     <option value="" class="form-control">Choose one</option>
                                     <option value="" class="form-control">ARTISTS</option>
@@ -1851,7 +1851,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label><i class="fa fa-upload" aria-hidden="true"></i>Upload Your Files</label>
+                                <label class="f-left"><i class="fa fa-upload" aria-hidden="true"></i>Upload Your Files</label>
                                 <input type="file" name="image" class="form-control">
                             </div>
                             <div class="form-group">
