Updated Contact form

--- a/index.html
+++ b/index.html
@@ -1727,7 +1727,7 @@
     
 
 
-    <div id="news" class="studio-posts">
+    <!-- <div id="news" class="studio-posts">
       <div class="heading-group heading-group heading-group_centered">
         <div class="heading-group__subtitle">Our Blog</div>
         <div class="heading-group__title">Latest posts from our press</div>
@@ -1756,7 +1756,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
           <!-- Form Started -->
           <div class="features-block__title fff" id="connect">Contact Us</div>
