--- a/index.html
+++ b/index.html
@@ -1758,11 +1758,13 @@
       </div>
     </div> -->
 
+          
+
           <!-- Form Started -->
-          <div class="features-block__title fff" id="connect">Contact Us</div>
+          <div class="features-block__title fff container" id="connect">Contact Us</div>
         <div class="form-top">
-          <div class="row">
-              <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
+          <div class="row cccc">
+              <div class="col-md-9 col-sm-12 col-xs-12 cccc">
                   <div class="panel panel-danger">
                       <div class="panel-body">
                           <form id="reused_form">
