--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <a class="top-menu__menu-link" href="#about">WHY US?</a>
             </li>
             <li class="top-menu__menu-item">
-              <a class="top-menu__menu-link" href="#video-gallery">Gallery</a>
+              <a class="top-menu__menu-link" href="#video-gallery">GALLERY</a>
             </li>
             <li class="top-menu__menu-item">
               <a class="top-menu__menu-link" href="#connect">CONTACT US</a>
@@ -115,7 +115,7 @@
             <a class="nav-link menu-panel__menu-link" href="#about">WHY US?</a>
           </li>
           <li class="menu-panel__menu-item">
-            <a class="nav-link menu-panel__menu-link" href="#video-gallery">Gallery</a>
+            <a class="nav-link menu-panel__menu-link" href="#video-gallery">GALLERY</a>
           </li>
           <li class="menu-panel__menu-item">
             <a class="nav-link menu-panel__menu-link" href="#connect">CONTACT US</a>
@@ -666,9 +666,9 @@
                    data-type="text"
                    data-x="['center','center','center','center']"
                    data-y="['middle','middle','middle','middle']">
-                <div class="container">
+                <div class="container music">
                   <div class="studio-main-slide__inner">
-                    <div class="studio-main-slide__subtitle">Music Production</div>
+                    <div class="studio-main-slide__subtitle music">Music Production</div>
                     <div class="studio-main-slide__title-wrapper">
                       <div class="studio-main-slide__title">DJ Artista
                         <br>
