--- a/index.html
+++ b/index.html
@@ -1767,7 +1767,7 @@
               <div class="col-md-9 col-sm-12 col-xs-12 cccc">
                   <div class="panel panel-danger">
                       <div class="panel-body">
-                          <form id="reused_form" method="POST" action="contact-handler.php">
+                          <form id="reused_form" method="POST" action="#contact-handler.php">
                               <div class="form-group">
                                   <label class="f-left"><i class="fa fa-user" aria-hidden="true"></i> Name</label>
                                   <input type="text" name="name" class="form-control" placeholder="Enter Name">
