--- a/index.html
+++ b/index.html
@@ -200,15 +200,15 @@
         </div>
       </div>
     </div> -->
-    <div id="services" class="cards-block">
+    <div id="services" class="cards-block aaa abtpad">
       <div class="cards-block__head">
         <div class="container">
           <div class="row">
             <div class="newcls">
-              <div class="cards-block__title">ABOUT US</div>
+              <div class="cards-block__title abt">ABOUT US</div>
             </div>
             <div class="newcls">
-              <div class="cards-block__text">We are a young digital entertainment company that creates top-notch audiovisual content for businesses of all industries and sizes to maximize their social media footprint.
+              <div class="cards-block__text just">We are a young digital entertainment company that creates top-notch audiovisual content for businesses of all industries and sizes to maximize their social media footprint.
                 By taking the outline of a brand story and marrying it with the power of sound and visuals, we create impactful messages that can make emotional connections with the right audience. 
                 Along with creating original music videos, short films and documentaries, we also undertake corporate events, where you build lasting relationships with your clients!
                  <br>
@@ -271,7 +271,7 @@
     </div>
     <div id="about" class="features-block">
       <div class="container mb">
-        <div class="features-block__title why-us">Why Us?</div>
+        <div class="features-block__title">Why Us?</div>
         <div class="features-block__text">Because we know that getting the right exposure in the entertainment industry is not easy! We, as artists, know and understand that the struggle here is real!
           creature.
         </div>
@@ -1807,7 +1807,7 @@
                                   </select>
                               </div>
                               <div class="form-group">
-                                  <label class="f-left"><i class="fa fa-upload" aria-hidden="true"></i>Upload Your Files <span style="color: red"><sup>*</sup></span></label>
+                                  <label class="f-left"><i class="fa fa-upload" aria-hidden="true"></i> Upload Your Files <span style="color: red"><sup>*</sup></span></label>
                                   <input class="form-control" name="UploadImage" type="file" value="Upload Image" accept='image/*' required>
                               </div>
                               <div class="form-group">
