pending form and font

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <a class="top-menu__menu-link" href="#home">HOME</a>
             </li>
             <li class="top-menu__menu-item">
-              <a class="top-menu__menu-link" href="#services">ABOUT US</a>
+              <a class="top-menu__menu-link" href="#about_us">ABOUT US</a>
             </li>
             <li class="top-menu__menu-item">
               <a class="top-menu__menu-link" href="#key_services">KEY SERVICES</a>
@@ -106,7 +106,7 @@
             <a class="nav-link menu-panel__menu-link" href="#home">HOME</a>
           </li>
           <li class="menu-panel__menu-item">
-            <a class="nav-link menu-panel__menu-link" href="#services">ABOUT US</a>
+            <a class="nav-link menu-panel__menu-link" href="#about_us">ABOUT US</a>
           </li>
           <li class="menu-panel__menu-item">
             <a class="nav-link menu-panel__menu-link" href="#key_services">KEY SERVICES</a>
@@ -200,12 +200,13 @@
         </div>
       </div>
     </div> -->
-    <div id="services" class="cards-block aaa abtpad">
+    <div id="about_us" class="features-block__title artist key">ABOUT US</div>
+    <div  class="cards-block aaa abtpad">
       <div class="cards-block__head">
         <div class="container">
           <div class="row">
             <div class="newcls">
-              <div class="cards-block__title abt">ABOUT US</div>
+              <!-- <div class="cards-block__title abt">ABOUT US</div> -->
             </div>
             <div class="newcls">
               <div class="cards-block__text just">We are a young digital entertainment company that creates top-notch audiovisual content for businesses of all industries and sizes to maximize their social media footprint.
@@ -223,7 +224,7 @@
           </div>
         </div>
       </div>
-      <div id = "key_services">
+     <div id = "key_services" class="features-block__title artist key">KEY SERVICES</div>
         <div class="cards">
           <div class="container-fluid">
             <div class="row">
@@ -267,7 +268,7 @@
             </div>
           </div>
         </div>
-      </div>
+      
     </div>
     <div id="about" class="features-block">
       <div class="container mb">
@@ -1831,7 +1832,7 @@
           <div class="footer-studio__group-title">Quick Links</div>
           <ul class="footer-studio__list">
             <li class="footer-studio__list-item">
-              <a class="footer-studio__list-link" href="#services">About us</a>
+              <a class="footer-studio__list-link" href="#about_us">About us</a>
             </li>
             <li class="footer-studio__list-item">
               <a class="footer-studio__list-link" href="#key_services">Key Services</a>
