--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                     <div class="studio-main-slide__text">This project designed &amp; building for purpose protect the ocean and exhibition. With inspired from sail, sponge and wind. Capri Ocean Musem
                       was born
                     </div>
-                    <a class="studio-main-slide__link studio-main-slide__link_inverted" href="#">GET IN TOUCH</a>
+                    <!-- <a class="studio-main-slide__link studio-main-slide__link_inverted" href="#">GET IN TOUCH</a> -->
                   </div>
                 </div>
               </div>
@@ -1780,7 +1780,7 @@
       <div class="features-block__title fff container" id="connect">Contact Us</div>
         <div class="form-top">
           <div class="row cccc">
-              <div class="col-md-7 col-sm-12 col-xs-12 cccc">
+              <div class="col-md-8 col-sm-12 col-xs-12 cccc">
                   <div class="panel panel-danger">
                       <div class="panel-body">
                           <form class="contact_us_data" enctype="multipart/form-data">
