--- a/index.html
+++ b/index.html
@@ -1786,13 +1786,17 @@
         <img src="https://d31i9b8skgubvn.cloudfront.net/assets/img/loading.gif" alt="loading">
         <h2 class="bahubali">Submitting, please wait...</h2>
       </div>
-      <div id="alertcustom">
+      <div id="alertcustom" role="alert">
         <center><div class="custom">
 
    
           <img class="imaga" src="img/tick.png" alt="done">
         <h1 class="thank">Thank You !</h1>
         <p class="getback">We will get back to you shortly.</p>
+       <div style="display: inline-flex" id="query">
+        <button id="resetformnew" class="resetform">Another Query ?</button>
+        <button id="iamdone" class="resetform" href="#home" >I'm done!</button>
+      </div>
      
        </div></center>
       </div>
